Final Code with export feature

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -24,6 +24,17 @@
     </div>
 
     <script src="_framework/blazor.webview.js" autostart="false"></script>
+    <script>
+        function downloadFile(fileName, fileBase64) {
+            const link = document.createElement("a");
+            link.href = "data:text/csv;base64," + fileBase64;
+            link.download = fileName;
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+        }
+
+    </script>
 
 </body>
 
